Correct infobar and leading info on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -93,15 +93,49 @@ h2 {
     cursor: pointer;
 }
 
+.infobar {
+        white-space: nowrap;
+        max-width: 30rem;
+        z-index: 1000;
+        padding-top: 1rem;
+        background-color: #121212;
+        color: #fff;
+        font-weight: 700;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}   
+
+    .scroll-text {
+    white-space: nowrap;
+    display: inline-block;
+    padding-left: 100%;
+    animation: scroll 15s linear infinite;
+}
+
+    /* Keyframes for scrolling effect */
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+        93%{
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(-100%);
+        }
+    }
+
 .headline-one{
-    font-size: 6rem;
+    font-size: 2.5rem;
     font-weight: 900;
     font-style: normal;
     margin-bottom: 1rem;
 }
 
 .lead {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 500;
     font-style: normal;
     margin-bottom: 1rem;
@@ -118,6 +152,7 @@ h2 {
     transition: 0.3s;
     font-weight: 700;
     font-size: 1.5em;
+    margin-bottom: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
@@ -413,28 +448,16 @@ footer p {
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }    
 
-    .scroll-text {
-    white-space: nowrap;
-    display: inline-block;
-    padding-left: 100%;
-    animation: scroll 15s linear infinite;
-}
-
-    /* Keyframes for scrolling effect */
-    @keyframes scroll {
-        0% {
-            transform: translateX(0);
-        }
-        93%{
-            transform: translateX(-100%);
-        }
-        100% {
-            transform: translateX(-100%);
-        }
-    }
-
     .main-container {
         margin-bottom: 5rem;
+    }
+
+    .headline-one{
+    font-size: 6rem;
+    margin-bottom: 1rem;
+    }
+    .lead {
+        font-size: 3rem;
     }
 
     .about {
